@@ -1,0 +1,47 @@
+#
+# Yet Another UserAgent Analyzer
+# Copyright (C) 2013-2018 Niels Basjes
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an AS IS BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+config:
+
+- matcher:
+    require:
+    - 'agent.(1)product.(1)comments.entry.(1)product.name="Microsoft Outlook"'
+    extract:
+      - 'AgentClass: 100 :"Email"'
+
+# Ensure that 'pro' is not detected as the language
+#   "pro" : "Old Provençal (to 1500)"
+- test:
+    input:
+      user_agent_string: 'Microsoft Office/16.0 (Microsoft Outlook 16.0.8241; Pro)'
+    expected:
+      DeviceClass              : 'Unknown'
+      DeviceName               : 'Unknown'
+      DeviceBrand              : 'Unknown'
+      OperatingSystemClass     : 'Unknown'
+      OperatingSystemName      : 'Unknown'
+      OperatingSystemVersion   : '??'
+      LayoutEngineClass        : 'Unknown'
+      LayoutEngineName         : 'Unknown'
+      LayoutEngineVersion      : '??'
+      LayoutEngineVersionMajor : '??'
+      AgentClass               : 'Email'
+      AgentName                : 'Microsoft Office'
+      AgentVersion             : '16.0'
+      AgentVersionMajor        : '16'
+      AgentNameVersion         : 'Microsoft Office 16.0'
+      AgentNameVersionMajor    : 'Microsoft Office 16'
+
