@@ -191,3 +191,5 @@ v4.0
 - Switch Analyzer to interface with default methods
 - Rename package annonate to annotate (which was a typo)
 - Upgrade Antlr to 4.7.1 and get rid of bug workaround
+- Introduce "Email" as a new AgentClass value.
+
